--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
             <img src="Images/zion_logo.jpg" alt="Zion in Christ Orphanage Logo" class="logo">
         </div>
         <ul class="nav-links">
+            <li><a href="#">HOME</a></li>
             <li><a href="#">ABOUT</a></li>
             <li><a href="#">CONTACT</a></li>
             <li><a href="#">PROJECTS</a></li>
