--- a/index.html
+++ b/index.html
@@ -329,18 +329,18 @@
     </style>
 </head>
 <body>
-    <!-- Header -->
+    <!-- Header with Charcoal Gray Background -->
     <header>
         <div class="logo-container">
             <img src="Images/zion_logo.jpg" alt="Zion in Christ Orphanage Logo" class="logo">
         </div>
         <ul class="nav-links">
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">CONTACT</a></li>
-            <li><a href="#">PROJECTS</a></li>
-            <li><a href="#">NEEDS</a></li>
-            <li><a href="#">MEDIA</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="projects.html">PROJECTS</a></li>
+            <li><a href="needs.html">NEEDS</a></li>
+            <li><a href="media.html">MEDIA</a></li>
             <li><a href="#" class="get-involved-btn">GET INVOLVED</a></li>
         </ul>
     </header>
