--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <!-- Slide 1: Christianity -->
             <div class="slide">
                 <img src="Images/core_value1.jpg" alt="Core Value: Christianity" class="slide-img">
-                <div class="slide-text">OUR CORE VALUES<br><span style="font-size:38px">Christianity</span></div>
+               <div class="slide-text">OUR CORE VALUES<br><span style="font-size:38px">Christianity</span></div>
             </div>
             
             <!-- Slide 2: Compassion -->
@@ -401,7 +401,7 @@
             <div class="content-text">
                 <h2 class="sub-heading">VISIONEER</h2>
                 <p>I started this orphanage because I grew up in a similar situation and knew the struggles firsthand. I wanted to provide a safe, loving environment for children who deserve a chance to thrive. My vision is to:</p>
-                <a href="#" class="see-more-btn">LEARN MORE</a>
+                <a href="about.html" class="see-more-btn">LEARN MORE</a>
             </div>
         </div>
     </section>
