--- a/needs.html
+++ b/needs.html
@@ -192,10 +192,9 @@
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="contact.html">CONTACT</a></li>
-            <li><a href="projects.html">PROJECTS</a></li>
             <li><a href="needs.html">NEEDS</a></li>
             <li><a href="media.html">MEDIA</a></li>
-            <li><a href="#" class="get-involved-btn">GET INVOLVED</a></li>
+            <li><a href="get-involved.html" class="get-involved-btn">GET INVOLVED</a></li>
         </ul>
     </header>
 
