--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             line-height: 1.6;
             color: var(--text-dark);
             background-color: var(--white);
-            padding-top: 100px;
+            padding-top: 100px; /* Proper spacing for desktop header */
         }
 
         /* Header with Charcoal Gray Background */
@@ -170,9 +170,13 @@
 
         /* Responsive Design */
         @media (max-width: 768px) {
+            body {
+                padding-top: 150px; /* Increased padding for mobile header */
+            }
+            
             header {
                 flex-direction: column;
-                padding: 10px;
+                padding: 15px 10px; /* Adjusted padding for better mobile spacing */
             }
             
             .nav-links {
@@ -198,6 +202,10 @@
                 width: 100%;
                 max-width: 400px;
                 margin: 0 auto;
+            }
+
+            .section {
+                padding-top: 20px; /* Reduced top padding on mobile */
             }
         }
     </style>
