made little updates

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 </head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Zion in Christ Orphanage - Giving vulnerable children a home, education, and hope for a better future. Support our mission today.">
+    <meta name="keywords" content="orphanage, support, charity, Nigeria, Zion in Christ, children, donate">
+    <meta name="robots" content="index, follow">
     <title>Zion in Christ Orphanage - God Gives the Nature, We Nurture</title>
     <style>
         /* CSS Reset */
